making log-in/info bar

--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Website Final</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="info_bar">
+            <div class="info_bar_left">
+                <img src="https://static-00.iconduck.com/assets.00/codepen-icon-256x256-et9eg0f0.png" alt="">
+                <p class="click">OnClick</p>
+                <button class="follow">+ Follow</button>
+                <h3 class="title"><strong></strong>Let's Code This - Episode 3</strong></h3>
+            </div>
+            <div class="info_bar_right">
+                <button class="icon_button"><span>&#9829;</span></button>
+                <button class="view_code">View Source Code</button>
+                <button class="sign_up">Sign Up</button>
+                <button class="log_in">Log In</button>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
