created nav bar

--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
         </div>
     </header>
     
+    <div class="nav_bar">
+        <div class="logo">STATED.</div>
+        <div class="menu">
+            <a href="#" class="menu_item active">Home</a>
+            <a href="#" class="menu_item">Properties</a>
+            <a href="#" class="menu_item">Agents</a>
+            <a href="#" class="menu_item">About</a>
+            <a href="#" class="menu_item">News</a>
+            <a href="#" class="menu_item">Contact</a>
+        </div>
+    </div>
 </body>
 </html>
