--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </header>
-    
+
     <div class="nav_bar">
         <div class="logo">STATED.</div>
         <div class="menu">
@@ -33,6 +33,13 @@
             <a href="#" class="menu_item">About</a>
             <a href="#" class="menu_item">News</a>
             <a href="#" class="menu_item">Contact</a>
+        </div>
+    </div>
+
+    <div class="gray_section">
+        <div class="gray_text">
+            <h1>Buy and sell real estate properties</h1>
+            <p>Lorem ipsum dolor sit amet consectectur adipisicing elit. Laboriosam assumenda ea quo cupiditate facere deleniti fuga officia.</p>
         </div>
     </div>
 </body>
