finished the best section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,25 @@
         </div>
     </section>
 
+    <section class="the_best">
+        <div class="flex_container_best">
+            <img src="https://media.nestseekers.com/files/02_2.webp" alt="Property 1" />
+            <div class="flex_container_right">
+                <h2>We Are the Best Real Estate Company</h2>
+                <p class="large_paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="small_paragraph">Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque nisi voluptas impedit Quo suscipit omnis iste velit maxime.</p>
+                <ul class="best_list">
+                    <li>Placeat maxime animi minus</li>
+                    <li>Placeat maxime animi minus</li>
+                    <li>Placeat maxime animi minus</li>
+                    <li>Placeat maxime animi minus</li>
+                    <li>Placeat maxime animi minus</li>
+                </ul>
+                <button class="rounded">Learn More</button>
+            </div>
+        </div>
+    </section>
+    
 
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
