finished testimonials section

--- a/index.html
+++ b/index.html
@@ -266,6 +266,43 @@
             </div>
         </div>
     </section>
+
+    <section class="testimonials">
+        <div class="container">
+            <h2>What Our Clients Are Saying</h2>
+            <div class="testimonials-wrapper">
+                <div id="testimonials-slider">
+                    <div>
+                        <blockquote>
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nostrum vitae explicabo dolore ratione. Quia iure quod ipsa blanditiis sint nulla a nam veritatis ex eos. Dicta molestiae dolorum laudantium."</p>
+                        </blockquote>
+                        <div class="testimonials-caption">
+                            <img src="https://i.redd.it/851u48frtd981.jpg" alt="Client 7" />
+                            <p>Sergeant Johnson</p>
+                        </div>
+                    </div>
+                    <div>
+                        <blockquote>
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nostrum vitae explicabo dolore ratione. Quia iure quod ipsa blanditiis sint nulla a nam veritatis ex eos. Dicta molestiae dolorum laudantium."</p>
+                        </blockquote>
+                        <div class="testimonials-caption">
+                            <img src="https://wallpapers.com/images/hd/tobey-maguire-in-ripped-spider-man-suit-rmygo40cg51mli8m.jpg" alt="Client 5" />
+                            <p>Peter Parker</p>
+                        </div>
+                    </div>
+                    <div>
+                        <blockquote>
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nostrum vitae explicabo dolore ratione. Quia iure quod ipsa blanditiis sint nulla a nam veritatis ex eos. Dicta molestiae dolorum laudantium."</p>
+                        </blockquote>
+                        <div class="testimonials-caption">
+                            <img src="https://akns-images.eonline.com/eol_images/Entire_Site/2010330/293.WillFerrell.tg.043010.jpg?fit=around%7C293:473&output-quality=90&crop=293:473;center,top" alt="Client 8" />
+                            <p>Ron Burgundy</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     
 
